PresentationActivity now produces fragments for each slide

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,5 @@
     <string name="name">Name of your Presentation</string>
     <string name="title_activity_presentation">PresentationActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="section_format">Slide: %1$d</string>
 </resources>
