oh boy. started implementation of master-detail-flow layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="title_activity_presentation">PresentationActivity</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Slide: %1$d/%2$d</string>
+    <string name="title_slidemdf_list">Slides</string>
+    <string name="title_slidemdf_detail">slide_mdf Detail</string>
 </resources>
