--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="slide_duration">Slide Duration</string>
     <string name="slide_desc">Slide Description</string>
     <string name="title_activity_slide_list">SlideListActivity</string>
+    <string name="title_activity_presentation_settings">Settings</string>
     <string name="name">Name of your Presentation</string>
     <string name="title_activity_presentation">PresentationActivity</string>
     <string name="action_settings">Settings</string>
